--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,13 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
         classpath('io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE')
+        
+        classpath 'com.github.jacobono:gradle-jaxb-plugin:1.3.6'              
     }
 }
 
@@ -17,6 +20,7 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot' 
 apply plugin: 'io.spring.dependency-management' 
 apply plugin: 'war'
+apply plugin: 'com.github.jacobono.jaxb'
 
 
 war {
@@ -56,3 +60,15 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.7'
 }
 
+
+jaxb {
+  xsdDir = "src/main/resources/schemas"
+  xjc {
+     generatePackage    = "com.company.example"
+  }
+  dependencies { 
+      jaxb 'com.sun.xml.bind:jaxb-xjc:2.2.7-b41'
+      jaxb 'com.sun.xml.bind:jaxb-impl:2.2.7-b41'
+      jaxb 'javax.xml.bind:jaxb-api:2.2.7'
+    }
+}
